// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Rectification details should render array values in properties correctly 1`] = `
<React.Fragment>
  <p>
    <strong>
      Created at:
    </strong>
     
  </p>
  <p>
    <strong>
      Current data:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      firstName
      : 
      Johnny
      <br />
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      email
      : 
      jb@coolcartoons.io
      <br />
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      someArray
      : 
      <React.Fragment
        key="0"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        0
        : 
        1
      </React.Fragment>
      <React.Fragment
        key="1"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        1
        : 
        2
      </React.Fragment>
      <React.Fragment
        key="2"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        2
        : 
        three
      </React.Fragment>
      <br />
    </React.Fragment>
  </p>
  <p>
    <strong>
      Updates:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      lastName
      : 
      Bravo
      <br />
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      someKey
      : 
      Some data goes here
      <br />
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      specifics
      : 
      <React.Fragment
        key="0"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        hairStyle
        : 
        fashionable
      </React.Fragment>
      <React.Fragment
        key="1"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        favoriteColor
        : 
        black
      </React.Fragment>
      <React.Fragment
        key="2"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        moreSpecifics
        : 
        <React.Fragment
          key="0"
        >
          <br />
          <React.Fragment
            key="0"
          >
              
          </React.Fragment>
          <React.Fragment
            key="1"
          >
              
          </React.Fragment>
          quote
          : 
          Man, I'm pretty.
        </React.Fragment>
      </React.Fragment>
      <React.Fragment
        key="3"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        wardrobe
        : 
        <React.Fragment
          key="0"
        >
          <br />
          <React.Fragment
            key="0"
          >
              
          </React.Fragment>
          <React.Fragment
            key="1"
          >
              
          </React.Fragment>
          0
          : 
          jeans
        </React.Fragment>
        <React.Fragment
          key="1"
        >
          <br />
          <React.Fragment
            key="0"
          >
              
          </React.Fragment>
          <React.Fragment
            key="1"
          >
              
          </React.Fragment>
          1
          : 
          t-shirt
        </React.Fragment>
      </React.Fragment>
      <br />
    </React.Fragment>
  </p>
  <p>
    Status: 
    APPROVED
  </p>
  <button
    className="btn ui-action"
    onClick={[Function]}
    type="button"
  >
    Approve
  </button>
</React.Fragment>
`;

exports[`(Component) Rectification details should render nested properties correctly 1`] = `
<React.Fragment>
  <p>
    <strong>
      Created at:
    </strong>
     
  </p>
  <p>
    <strong>
      Current data:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      firstName
      : 
      Johnny
      <br />
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      email
      : 
      jb@coolcartoons.io
      <br />
    </React.Fragment>
  </p>
  <p>
    <strong>
      Updates:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      lastName
      : 
      Bravo
      <br />
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      someKey
      : 
      Some data goes here
      <br />
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      specifics
      : 
      <React.Fragment
        key="0"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        hairStyle
        : 
        fashionable
      </React.Fragment>
      <React.Fragment
        key="1"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        favoriteColor
        : 
        black
      </React.Fragment>
      <React.Fragment
        key="2"
      >
        <br />
        <React.Fragment
          key="0"
        >
            
        </React.Fragment>
        moreSpecifics
        : 
        <React.Fragment
          key="0"
        >
          <br />
          <React.Fragment
            key="0"
          >
              
          </React.Fragment>
          <React.Fragment
            key="1"
          >
              
          </React.Fragment>
          quote
          : 
          Man, I'm pretty.
        </React.Fragment>
      </React.Fragment>
      <br />
    </React.Fragment>
  </p>
  <p>
    Status: 
    APPROVED
  </p>
  <button
    className="btn ui-action"
    onClick={[Function]}
    type="button"
  >
    Approve
  </button>
</React.Fragment>
`;

exports[`(Component) Rectification details should render when loading correctly 1`] = `undefined`;

exports[`(Component) Rectification details should render when not loading correctly 1`] = `
<React.Fragment>
  <p>
    <strong>
      Created at:
    </strong>
     
  </p>
  <p>
    <strong>
      Current data:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      firstName
      : 
      Johnny
      <br />
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      email
      : 
      jb@coolcartoons.io
      <br />
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      someKey
      : 
      Some data goes here
      <br />
    </React.Fragment>
  </p>
  <p>
    <strong>
      Updates:
    </strong>
  </p>
  <p>
    <React.Fragment
      key="0"
    >
      lastName
      : 
      Bravo
      <br />
    </React.Fragment>
  </p>
  <p>
    Status: 
    PENDING
  </p>
  <button
    className="btn ui-action"
    onClick={[Function]}
    type="button"
  >
    Approve
  </button>
</React.Fragment>
`;
